tests/snapshots/cli__cli__ambiguous_replace_ensure_styling.snap
---
source: tests/cli.rs
expression: html_stderr
---
<b><span style='color:#a00'>error</span></b>: The numbered capture group `<b>$1</b>` in the replacement text is ambiguous.
<b><span style='color:#00a'>hint</span></b>: Use curly braces to disambiguate it `<b>${1}bad</b>`.
<b>\t</b>$<b><span style='color:#a00'>1bad</span></b> after
   <b>^^^^</b>

